sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:5: error: '(' expected but identifier found.
    if plusPetit(i,i-1){
       ^AlgBubbleSort2:8: error: illegal start of simple expression
  }
  ^